--- a/infraestructure/requirements.txt
+++ b/infraestructure/requirements.txt
@@ -3,16 +3,29 @@ anyio==3.7.1
 bcrypt==4.0.1
 boto3==1.28.73
 botocore==1.31.73
+cachetools==5.3.2
+certifi==2023.7.22
 cffi==1.16.0
+charset-normalizer==3.3.1
 click==8.1.7
 cryptography==41.0.5
+cx-Oracle==8.3.0
 dnspython==2.4.2
 ecdsa==0.18.0
 email-validator==2.1.0.post1
 et-xmlfile==1.1.0
 exceptiongroup==1.1.3
 fastapi==0.104.0
+google-api-core==2.12.0
+google-auth==2.23.3
+google-cloud-bigquery==3.13.0
+google-cloud-core==2.3.3
+google-crc32c==1.5.0
+google-resumable-media==2.6.0
+googleapis-common-protos==1.61.0
 greenlet==3.0.1
+grpcio==1.59.2
+grpcio-status==1.59.2
 h11==0.14.0
 httptools==0.6.1
 idna==3.4
@@ -20,13 +33,20 @@ jmespath==1.0.1
 loguru==0.7.2
 numpy==1.26.1
 openpyxl==3.1.2
+packaging==23.2
 pandas==2.1.2
 passlib==1.7.4
+proto-plus==1.22.3
+protobuf==4.24.4
 psycopg2==2.9.9
 pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pycparser==2.21
 pydantic==1.10.13
 pydantic_core==2.10.1
+pymongo==4.5.0
+PyMySQL==1.1.0
+pyodbc==5.0.1
 python-dateutil==2.8.2
 python-decouple==3.8
 python-dotenv==1.0.0
@@ -35,6 +55,7 @@ python-magic==0.4.27
 python-multipart==0.0.6
 pytz==2023.3.post1
 PyYAML==6.0.1
+requests==2.31.0
 rsa==4.9
 s3transfer==0.7.0
 six==1.16.0
